--- a/TODO
+++ b/TODO
@@ -1,14 +1,53 @@
-For next public release:
-************************
+For next alpha release:
+***********************
 
-* Alexandre Oliva suggests that we should have an option to hardcode
-paths into libraries, as well as binaries: `... -Wl,-soname
--Wl,/tmp/libtest.so.0 ...'.  Tim Mooney wants the same thing.
+* Fast installation (linking on demand in the build tree)
+must be optional.
+
+* check whether the version of libtool.m4 is compatible
+with ltconfig/ltmain.sh
+
+* libltdl is broken when configured with --enable-ltdl-install
+
+* check whether the "file" command is available
+
+* update the NEWS file
 
 * Tom Lane adds that HP-UX's linker, at least (I've also found this on
 AIX 4), distinguishes between global function and global variable
 references.  This means that we cannot declare every symbol as `extern
 char'.  Find a workaround.
+
+For next public release:
+************************
+
+* Inter-library dependencies should be fully tracked by libtool
+and need to work for ltlibraries too. This requires looking up 
+installed libtool libraries for transparent support.
+Thomas Tanner has a patch for this. 
+
+* Alexandre Oliva suggests that we should have an option to hardcode
+paths into libraries, as well as binaries: `... -Wl,-soname
+-Wl,/tmp/libtest.so.0 ...'.  Tim Mooney wants the same thing.
+
+* Lists of exported symbols should be stored in the pseudo library
+so that the size of lt_preloaded_symbols can be reduced.
+
+* Godmar Back writes:
+  libltdl uses such stdio functions as fopen, fgets, feof, fclose, and others.
+  These functions are not async-signal-safe. While this does not make 
+  libltdl unusable, it restricts its usefulness and puts an 
+  unnecessary burden on the user.
+
+  As a remedy, I'd recommend to replace those functions with functions
+  that POSIX says are async-signal-safe, such as open, read, close.
+  This will require you to handle interrupted system calls and implement
+  fgets, but the former isn't hard and there's plenty of implementations
+  out from which you can steal the latter.
+
+  I believe relying on async-signal-safe functions to the greatest extent
+  possible would greatly improve libltdl's ability to be embedded in and 
+  used by other systems.
 
 * Documentation:
 
@@ -18,6 +57,8 @@ char'.  Find a workaround.
   are not documented.
 
 - Purpose and usage of convenience libraries must be better documented
+
+- some new internal variables are not documented yet.
 
 In the future:
 **************
