--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -173,7 +173,7 @@ Dlopened modules
 
 Using libltdl
 
-* Libltdl's interface::         How to use libltdl in your programs.
+* Libltdl interface::           How to use libltdl in your programs.
 * Modules for libltdl::         Creating modules that can be @code{dlopen}ed.
 * Distributing libltdl::        How to distribute libltdl with your package.
 
@@ -1163,8 +1163,12 @@ Allow symbols from @var{output-file} to be resolved with @code{dlsym}
 @item -export-symbols @var{symfile}
 Tells the linker to export only the symbols listed in @var{symfile}. 
 The symbol file should end in @samp{.sym} and must contain the name of one 
-symbol per line. This option does not work for modules and is not
-supported on all platforms.
+symbol per line. This option has no effect on some platforms.
+By default all symbols are exported.
+
+@item -export-symbols-regex @var{regex}
+Same as @samp{-export-symbols}, except that only symbols matching
+the regular expression @var{regex} are exported.
 By default all symbols are exported.
 
 @item -L@var{libdir}
@@ -2553,16 +2557,16 @@ libtool's dlpreopen (see @pxref{Dlpreopening})
 @end itemize
 
 @menu
-* Libltdl's interface::         How to use libltdl in your programs.
+* Libltdl interface::           How to use libltdl in your programs.
 * Modules for libltdl::         Creating modules that can be @code{dlopen}ed.
 * Distributing libltdl::        How to distribute libltdl with your package.
 @end menu
 
-@node Libltdl's interface
+@node Libltdl interface
 @section How to use libltdl in your programs
 
 @noindent
-Libltdl's API is similar to the dlopen interface of Solaris and Linux,
+The libltdl API is similar to the dlopen interface of Solaris and Linux,
 which is very simple but powerful.
 
 @noindent
@@ -3137,16 +3141,16 @@ of the message that contained his patch:
 The basic architecture is this: in @file{ltconfig.in}, the person who
 writes libtool makes sure @samp{$deplibs}, or @samp{$compile_dependencylibs}
 are included in @samp{$archive_cmds} somewhere and also sets the
-@samp{$deplibs_check_method}, and maybe @samp{$file_magic_command} when
+@samp{$deplibs_check_method}, and maybe @samp{$file_magic_cmd} when
 @samp{deplibs_check_method} is file_magic.
 
 @samp{deplibs_check_method} can be one of five things:
 @table @samp
 @item file_magic [@var{regex}]
 @vindex file_magic
-@vindex file_magic_command
+@vindex file_magic_cmd
 looks in the library link path for libraries that have the right
-libname.  Then it runs @samp{$file_magic_command} on the library and
+libname.  Then it runs @samp{$file_magic_cmd} on the library and
 checks for a match against @samp{regex} using @code{egrep}.
 
 @item test_compile 
@@ -3331,6 +3335,13 @@ simply set shell variables, then sourced the libtool backend,
 inlines the contents of @code{ltmain.sh} into the generated
 @code{libtool}, which improves performance on many systems.
 
+The convention used for naming variables which hold shell commands for
+delayed evaluation, is to use the suffix @code{_cmd} where a single
+line of valid shell script is needed, and the suffix @code{_cmds} where
+multiple lines of shell script @strong{may} be delayed for later
+evaluation.  By convention, @code{_cmds} variables delimit the
+evaluation units with the @code{~} character where necessary.
+
 Here is a listing of each of the configuration variables, and how they
 are used within @code{ltmain.sh}:
 
@@ -3376,11 +3387,17 @@ is no way to generate a shared library with references to symbols that
 aren't defined in that library.
 @end defvar
 
+@defvar always_export_symbols
+Whether libtool should automatically generate a list of exported symbols
+using @var{export_symbols_cmds} before linking an archive.
+Set to @samp{yes} or @samp{no}.  Default is @samp{no}
+@end defvar
+
 @defvar archive_cmds
-@defvarx archive_sym_cmds
+@defvarx archive_expsym_cmds
 @defvarx old_archive_cmds
 Commands used to create shared and static libraries, respectively.
-@samp{archive_sym_cmds} is used when -export-symbols was defined.
+@samp{archive_expsym_cmds} is used when -export-symbols was defined.
 @end defvar
 
 @defvar old_archive_from_new_cmds
@@ -3411,14 +3428,33 @@ i.e whether object files do not have to have the suffix ".o".
 Set to @samp{yes} or @samp{no}.
 @end defvar
 
+@defvar dlopen
+Whether @code{dlopen} is supported on the platform.
+Set to @samp{yes} or @samp{no}.
+@end defvar
+
+@defvar dlopen_self
+Whether it is possible to @code{dlopen} the executable itself.
+Set to @samp{yes} or @samp{no}.
+@end defvar
+
 @defvar echo
 An @code{echo} program which does not interpret backslashes as an
 escape character.
 @end defvar
 
+@defvar exclude_expsyms
+List of symbols that should not be listed in the preloaded symbols.
+@end defvar
+
 @defvar export_dynamic_flag_spec
 Compiler link flag that allows a dlopened shared library to reference
 symbols that are defined in the program.
+@end defvar
+
+@defvar export_symbols_cmds
+Commands to extract exported symbols from @var{libobjs} to the
+file @var{export_symbols}.
 @end defvar
 
 @defvar finish_cmds
@@ -3491,6 +3527,10 @@ For information purposes, set to the specified and canonical names of
 the system that libtool was configured for.
 @end defvar
 
+@defvar include_expsyms
+List of symbols that must always be exported when using @var{export_symbols}.
+@end defvar
+
 @defvar libext
 The standard old archive suffix (normally "a").
 @end defvar
@@ -3517,6 +3557,9 @@ Whether libtool should automatically prefix module names with 'lib'.
 Set to @samp{yes} or @samp{no}.  By default, it is @samp{unknown}, which 
 means the same as @samp{yes}, but documents that we are not really sure
 about it.
+@samp{yes} means that it is possible both to @code{dlopen} and to
+link against a library wihthout 'lib' prefix,
+i.e. it requires @var{hardcode_direct} to be @samp{yes}.
 @end defvar
 
 @defvar need_version
@@ -3573,6 +3616,17 @@ Commands to create a reloadable object.
 @defvar runpath_var
 The environment variable that tells the linker which directories to
 hardcode in the resulting executable.
+@end defvar
+
+@defvar shlibpath_overrides_runpath
+Indicates whether it is possible to override the hard-coded library
+search path of a program with an environment variable.  If this is set
+to no, libtool may have to create two copies of a program in the build
+tree, one to be installed and one to be run in the build tree only.  The 
+latter will be created on-demand, only if the program is actually run in
+the build tree.  If this is set to yes, libtool will set
+@code{shlibpath_var} in the wrapper script before starting the program.
+The default value is unknown, which is equivalent to no.
 @end defvar
 
 @defvar shlibpath_var
