--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 1999-02-26  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+	
+	* libtool.m4 (cygwin): s/\\(mingw\\|cygwin\\)32/\\1/g.  Must've
+	missed this file when I changed to cygnus' new sanction name.
 
 	* ltconfig.in (sub_uncdrive): removed.  This won't work with
 	the next version of cygwin.
