--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-03-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in (relink_command): do not prepend cd `pwd` to it, the
+	scripts already enters the correct directory, and expanding the
+	pathname would prevent the build tree from moving
+	
 	* ltconfig.in (enable_fast_install): force it to no only if we
 	need relink; in the other cases, set it to needless
 	* ltmain.in (fast_install): if needless, set relink_command empty
