--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -2623,8 +2623,7 @@ Unresolved symbols in the module are resolved using its dependency
 libraries and previously dlopened modules.  If the executable using this
 module was linked with the @code{-export-dynamic} flag, then the global
 symbols in the executable will also be used to resolve references in the
-module.  Libltdl tries to resolve the symbols immediately and returns
-@code{NULL} if that fails.
+module.
  
 If @var{filename} is NULL @code{lt_dlopen} will return a handle
 for the program itself, which can be used to access its symbols 
