* TODO: removed .a library namespace clash for win32.  It is now resolved.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* doc/libtool.texi (old_archive_from_expsyms_cmds,
 	extract_expsyms_cmds): documented these new variables.
 
+	* TODO: removed .a library namespace clash for win32.  It is
+	now resolved.
+
 1999-03-06  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libltdl/ltdl.c (LTDL_LAZY_OR_NOW): renamed from LTDL_NOW; prefer 
