--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-09  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* NEWS: merged from trunk and updated.
+
 1999-03-08  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* doc/libtool.texi (old_archive_from_expsyms_cmds,
