--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.2e: CVS version; 1.2f: 1999-?-?, Libtool team:
+* In order for libtool to attempt to link a shared library (dll) on win32
+  platforms, you must pass the -no-undefined flag to libtool in link mode.
+* The path to GNU ld now works on cygwin-b18 to cygwin-b20.2 at least.
+* Support for IRIX library versioning.
+* Improved support for DJGPP envionment.
+* Wrapper scripts now work on win32.
 * libtool will correctly link uninstalled libraries into programs
   and prefer uninstalled libraries to installed ones
 * Library paths that are in the system search path are no longer hardcoded.
